--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@ It served as an html document that dynamically inserts React code from your appl
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>BrandyEatery</title>
   </head>
   <body>
     <div id="root"></div>
