--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@ It served as an html document that dynamically inserts React code from your appl
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/Brandeatery Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BrandyEatery</title>
   </head>
